code refactor for sprint 6 add tests for history manager